# DeepImageSearch

./: CHANGELOG.md  LICENSE.txt  README.md  README.rst  pyproject.toml  requirements.txt  setup.py
.ipynb_checkpoints/: Deep Image Search Demo-checkpoint.ipynb
DeepImageSearch/: DeepImageSearch.py  __init__.py  config.py  requirements.txt  search_engine.py
DeepImageSearch.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
DeepImageSearch/agents/: __init__.py  langchain_tool.py  mcp_server.py  tool_interface.py
DeepImageSearch/core/: __init__.py  captioner.py  embeddings.py  indexer.py  searcher.py
DeepImageSearch/data/: __init__.py  loader.py
DeepImageSearch/metadatastore/: __init__.py  base.py  json_store.py  postgres_store.py
DeepImageSearch/vectorstores/: __init__.py  base.py  chroma_store.py  faiss_store.py  qdrant_store.py
Demo/: 01_basic_image_search.py  02_text_to_image_search.py  03_hybrid_search.py  04_filtered_search.py  05_llm_captioning.py  06_vector_stores.py  07_metadata_storage.py  08_agentic_tools.py  09_embedding_models.py  10_incremental_indexing.py  Deep Image Search Demo.ipynb  DeepImageSearchDemo.py
Demo/.ipynb_checkpoints/: Deep Image Search Demo-checkpoint.ipynb
Documents/: 01-getting-started.md  02-search-engine.md  03-embeddings.md  04-captioning.md  05-vector-stores.md  06-metadata-storage.md  07-agentic-integration.md  08-data-loading.md  09-api-reference.md  Document.md
